[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# PEP 621 Standard
[project]
name = "turborg"
version = "0.1.1"
description = "Turborg is a full solution for web frameworks in python."
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
    { name = "stefanzc", email = "stefanzc@turborg.com" },
]
keywords = ["dependency-injection", "inversion-of-control", "high-performance", "web-framework", "fast", "turborg", "minimalist"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "turboroid>=0.1.0, <1.0.0",
    "turbolightdi>=0.1.0, <1.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/turborg/turborg"
"Repository" = "https://github.com/turborg/turborg"
"Bug Tracker" = "https://github.com/turborg/turborg/issues"

[tool.hatch.build]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/turborg"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
